# glpwnme

./: .gitignore  Dockerfile  Dockerfile.glpi-test  README.md  app.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_cves.sh
glpwnme/: __init__.py
glpwnme/exploits/: exceptions.py  exploit.py  logger.py  lowpriv.py  orchestrator.py  plugin_exploit.py  requirements.py  sql_injection_mixin.py  update_sql_injection_mixin.py
glpwnme/exploits/implementations/: __init__.py  cve_2022_31061.py  cve_2022_35914.py  cve_2022_35947.py  cve_2022_39323.py  cve_2023_22500.py  cve_2023_33971.py  cve_2023_35940.py  cve_2023_36808.py  cve_2023_36810.py  cve_2023_41320.py  cve_2023_41323.py  cve_2023_41326.py  cve_2023_42802.py  cve_2023_43813.py  cve_2023_46727.py  cve_2023_51446.py  cve_2024_11955.py  cve_2024_27096.py  cve_2024_27098.py  cve_2024_27937.py  cve_2024_31456.py  cve_2024_37149.py  cve_2024_41679.py  cve_2024_43416.py  cve_2024_43418.py  cve_2024_45608.py  cve_2024_47758.py  cve_2024_47760.py  cve_2024_47761.py  cve_2024_48912.py  cve_2024_50339.py  cve_2025_21619.py  cve_2025_21626.py  cve_2025_23024.py  cve_2025_24799.py  cve_2025_24801.py  cve_2025_25192.py  cve_2025_32786.py  cve_2025_52567.py  (+37 more)
glpwnme/exploits/utils/: __init__.py  glpi_server_auth.py  glpi_session.py  glpi_utils.py  (+1 more)
scripts/: gen_static_fingerprints.py
static/css/: style.css
static/js/: script.js
templates/: index.html
test/: conftest.py  dump_login_response.py  test_anyauth.py  test_login.py  test_login_customized.py  test_mfa.py  test_utils.py
(+24 files in other folders)
