[tool.poetry]
name = "glpwnme"
version = "0.4.2"
description = "Tool to exploit non up-to-date GLPI"
authors = ["Guilhem Rioux <guilhem.rioux@orangecyberdefense.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
idna = "3.6"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
packaging = "23.2"
pygments = "2.17.2"
requests = "2.34.2"
rich = "13.7.1"
soupsieve = "2.5"
urllib3 = "2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glpwnme = "glpwnme:run_cli"
